--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 .idea/.idea.FitnessClicker/.idea/misc.xml
+.idea/.idea.FitnessClicker/.idea/workspace.xml
