--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ crashlytics-build.properties
 
 .idea/.idea.FitnessClicker/.idea/misc.xml
 .idea/.idea.FitnessClicker/.idea/workspace.xml
+.idea/.idea.FitnessClicker/.idea/workspace.xml
