fixed main scene and testsceneMartin

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ crashlytics-build.properties
 .idea/.idea.FitnessClicker/.idea/misc.xml
 .idea/.idea.FitnessClicker/.idea/workspace.xml
 .idea/.idea.FitnessClicker/.idea/workspace.xml
+.idea/.idea.FitnessClicker/.idea/workspace.xml
+.idea/.idea.FitnessClicker/.idea/indexLayout.xml
