--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ crashlytics-build.properties
 .idea/.idea.FitnessClicker/.idea/workspace.xml
 .idea/.idea.FitnessClicker/.idea/workspace.xml
 .idea/.idea.FitnessClicker/.idea/indexLayout.xml
+.idea/.idea.FitnessClicker/.idea/contentModel.xml
+.idea/.idea.FitnessClicker/.idea/workspace.xml
